# TCEngine

./: README.md  TCEngine.sln
Documents/: 开发笔记.md
TCEngine/: CMakeLists.txt  TCEngine.vcxproj  TCEngine.vcxproj.filters
TCEngine/android/: settings.gradle
TCEngine/android/app/: build.gradle
TCEngine/android/app/src/androidTest/java/com/example/tcengine/: ExampleInstrumentedTest.java
TCEngine/android/app/src/main/: AndroidManifest.xml
TCEngine/android/app/src/main/res/values/: strings.xml
TCEngine/android/app/src/test/java/com/example/tcengine/: ExampleUnitTest.java
TCEngine/android/gradle/wrapper/: gradle-wrapper.properties
TCEngine/src/: AppState.h  Game.cpp  Game.h  Log.cpp  Log.h  Main.cpp  StringHelper.cpp  StringHelper.h
TCEngine/src/Core/: EntityID.h  EntityManager.h  ObjectPool.h
TCEngine/src/Game/: AppState.h  Application.cpp  Application.h  Game.cpp  Game.h  GameClient.cpp  GameClient.h  GameServer.cpp  GameServer.h  GameState.cpp  GameState.h  GameWindow.cpp  GameWindow.h
TCEngine/src/Graphics/: Graphics.cpp  Graphics.h  GraphicsDevice.cpp  GraphicsDevice.h  GraphicsDeviceGLES.cpp  GraphicsDeviceOpenGL.cpp  GraphicsHelper.cpp  GraphicsHelper.h  GraphicsResource.cpp  GraphicsResource.h  GraphicsResourceManager.h  Program.cpp  Program.h  ProgramManager.cpp  ProgramManager.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  TextureManager.cpp  TextureManager.h
TCEngine/src/NetWork/: NetClient.cpp  NetClient.h  NetPacket.cpp  NetPacket.h  NetPacketReader.cpp  NetPacketReader.h  NetPacketWriter.cpp  NetPacketWriter.h  NetSession.cpp  NetSession.h  SingleSocketPool.cpp  SingleSocketPool.h  TCSocket.cpp  TCSocket.h
TCEngine/src/Type/: Color.cpp  Color.h  Color.inl  Matrix.cpp  Matrix.h  Matrix.inl  PrimitiveType.h  Rect.h  Rect.inl  SurfaceFormat.h  Type.cpp  Type.h  Vector.cpp  Vector.h  Vector.inl  VertexFormat.h
TCEngine/src/Utils/: ByteStream.h  ExceptionHelper.h  File.cpp  File.h  FileMapper.cpp  FileMapper.h  IList.h  Log.cpp  Log.h  MathHelper.h  Memory.h  Memory.inl  RandomGenerator.h  RandomGenerator.inl  SysConfig.h  TCArray.h  TCArrayList.h  TCArrayListShared.h  TCByteStream.h  TCDictionary.h  TCEncode.h  TCFile.cpp  TCFile.h  TCImage.cpp  TCImage.h  TCJson.h  TCLog.cpp  TCLog.h  TCMath.h  TCMath.inl  TCObject.h  TCString.cpp  TCString.h  TCUtils.h  TickRunner.cpp  TickRunner.h  WarningConfig.h
Tests/Default_Test/: CMakeLists.txt  Main.cpp
Tests/Win_Graphics_Test/: CMakeLists.txt
